Fix similar error that can be caused by an invalid custom mailer class